# mml_guidance

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .tmuxinator.yml  CMakeLists.txt  README.md  __init__.py  analyze_hardware_data.py  package.xml  plot_hardware_data.py  requirements.txt  setup.cfg  setup.py
data/: errors.csv  rms.csv
launch/: april_hardware.launch.py  bag_hardware.launch  bag_sim.launch  hardware_visualization.launch  mml_sim_estimator.launch  sim_experiments.launch  sim_experiments.launch.py  track_hardware.launch  turtlebot_hardware.launch  turtlebot_hardware.launch.save  visualization.launch
mml_guidance/: ParticleFilter.py  analyze_hardware_data.py  gnn_associator.py  guidance.py  kf.py  lawnmower.py  main_guidance_node.py  markov_goal_pose.py  mml_pf_visualization.py  particle_filter_gnn_associator.py  particle_filter_ros_wrapper.py  plot_data_all_runs.py  ppo_guidance.py  repeated_sim.sh
mml_guidance/mml_network/: data_functions.py  motion_model_network.py  simple_dnn.py  train.py  training_functions.py
mml_guidance/mml_network/models/: best_noisy_5_v2_velocities_occlusions_ScratchTransformer.pth  best_noisy_ScratchTransformer.pth  best_noisy_SimpleDNN.pth
msg/: Particle.msg  ParticleArray.msg  ParticleMean.msg
scripts/: ParticleFilter.py  analyze_data.py  analyze_hardware_data.py  guidance.py  kf.py  lawnmower.py  markov_goal_pose.py  mml_pf_visualization.py  plot_data_all_runs.py  plot_data_run.py  plot_hardware_all_runs.py  plot_hardware_data.py  plot_hardware_run.py  repeated_sim.sh  ros2bag_csv.py  spaguetti.py  summarize_joined_runs.py
scripts/mml_network/: convert_data.py  deploy_mml.py  motion_model_network.py  scratch_transformer.py  simple_dnn.py  train.py  training_functions.py  transformer.py  transformer_functions.py  visualize_graph.py
simulation/: ROS_Odometry.usd  isaac_mml_empty_env.usd  isaac_mml_env.usd
src/: drone_guidance.cpp  drone_guidance.hpp  guidance.py  markov_goal_pose.py  old_guidance.py
